--- a/chrome_app/manifest.json
+++ b/chrome_app/manifest.json
@@ -4,7 +4,8 @@
 	"version":"1.0",
 	"manifest_version":2,
 	"icons":{
-		"19":"icon-19x18.png",
+		"16":"icon-16x16.png",
+		"19":"icon-19x19.png",
 		"48":"icon-48x48.png",
 		"128":"icon-128x128.png"
 	},
@@ -14,6 +15,5 @@
 		}
 	},
 	"content_security_policy": "script-src 'self' https://apis.google.com 'unsafe-eval'; object-src 'self'; img-src *; frame-src *;  ",
-	"permissions": ["tabs", "storage",
-	    "webRequest", "webRequestBlocking", "http://*/*", "https://*/*"]
+	"permissions": ["webRequest", "webRequestBlocking", "http://*/*", "https://*/*"]
 }
